--- a/package.json
+++ b/package.json
@@ -13,8 +13,6 @@
   "dependencies": {
     "@anthropic-ai/sdk": "^0.36.3",
     "codemirror": "^6.0.1",
-    "vite": "^5.4.14",
-    "esbuild": "^0.25.0",
     "@codemirror/lang-cpp": "^6.0.2",
     "@codemirror/lang-java": "^6.0.1",
     "@codemirror/lang-javascript": "^6.2.3",
@@ -88,11 +86,13 @@
     "wouter": "^3.3.5",
     "ws": "^8.18.0",
     "zod": "^3.23.8",
-    "zod-validation-error": "^3.4.0"
+    "zod-validation-error": "^3.4.0",
+    "vite": "^5.4.14",
+    "esbuild": "^0.25.0",
+    "@replit/vite-plugin-cartographer": "^0.0.2",
+    "@replit/vite-plugin-runtime-error-modal": "^0.0.3"
   },
   "devDependencies": {
-    "@replit/vite-plugin-cartographer": "^0.0.2",
-    "@replit/vite-plugin-runtime-error-modal": "^0.0.3",
     "@tailwindcss/typography": "^0.5.15",
     "@types/connect-pg-simple": "^7.0.3",
     "@types/express": "4.17.21",
@@ -109,7 +109,7 @@
     "postcss": "^8.4.47",
     "tailwindcss": "^3.4.14",
     "tsx": "^4.19.1",
-    "typescript": "5.6.3"
+    "typescript": "5.6.3"   
   },
   "optionalDependencies": {
     "bufferutil": "^4.0.8"
